kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manaos
  labels:
    name: manaos
    environment: production
